retries-tls/conf/envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:15001",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "access_log": [
              {
                "path": "/tmp/envoy-traffic"
              }
            ],
            "generate_request_id": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["httpbin.org"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "auto_host_rewrite": true,
                      "cluster": "httpbin_tls_service",
                      "retry_policy": {
                        "retry_on": "5xx",
                        "num_retries": 3
                      }
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:10443",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_https",
            "access_log": [
              {
                "path": "/tmp/envoy-traffic"
              }
            ],
            "generate_request_id": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["httpbin.org"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "auto_host_rewrite": true,
                      "cluster": "httpbin_tls_service",
                      "retry_policy": {
                        "retry_on": "5xx",
                        "num_retries": 3
                      }

                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "cluster_manager": {
    "clusters": [
      {
        "name": "httpbin_service",
        "connect_timeout_ms": 250,
        "type": "logical_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://httpbin.org:80"
          }
        ]
      },
      {
        "name": "httpbin_tls_service",
        "connect_timeout_ms": 250,
        "type": "logical_dns",
        "lb_type": "round_robin",
        "ssl_context": {
          "ca_cert_file": "/etc/ssl/certs/ca-certificates.crt",
          "verify_subject_alt_name": ["httpbin.org"],
          "sni": "httpbin.org"
        },
        "hosts": [
          {
            "url": "tcp://httpbin.org:443"
          }
        ]
      }
    ]
  },
  "admin": {
    "access_log_path": "/tmp/envoy-admin",
    "address": "tcp://127.0.0.1:15000"
  }
}
